@startuml

title __SRC's Class Diagram__\n

  namespace  {
    interface Command {
        {abstract} + execute()
        {abstract} + undo()
    }
  }
  

  namespace  {
    class CommandMove {
        ~ prevX : int
        ~ prevY : int
        ~ xMovement : int
        ~ yMovement : int
        + execute()
        + undo()
        - memorizeCoordinates()
    }
  }
  

  namespace  {
    class CommandPutItem {
        ~ item : String
        ~ lastIndex : int
        + execute()
        + undo()
        - emptySlot()
    }
  }
  

  namespace  {
    interface Movable {
        {abstract} + getX()
        {abstract} + getY()
        {abstract} + setX()
        {abstract} + setY()
    }
  }
  

  namespace  {
    interface Storable {
        {abstract} + getInventoryItem()
        {abstract} + getInventoryLength()
        {abstract} + setInventoryItem()
    }
  }
  

  CommandMove .up.|> Command
  CommandMove o-- Movable : entity
  CommandPutItem .up.|> Command
  CommandPutItem o-- Storable : entity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
